modif sur les csv

--- a/ml/cleaning.ipynb
+++ b/ml/cleaning.ipynb
@@ -15,8 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_allocine = pd.read_csv(\"../scrapper/infosfilmsallocine.csv\")\n",
-    "data_target_allocine = pd.read_csv(\"../scrapper/releaseFrUsaAllocine.csv\")\n",
+    "data_allocine = pd.read_csv(\"input_datasets/infosfilmsallocine.csv\")\n",
+    "data_target_allocine = pd.read_csv(\"input_datasets/releaseFrUsaAllocine.csv\")\n",
     "\n",
     "\n"
    ]
