PB0-15 dossier avec nettoyage, modele et test prediction

--- a/ml/ql/cleaning_ql.ipynb
+++ b/ml/ql/cleaning_ql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_jp = pd.read_csv(\"datasets/moviesdata.csv\")"
+    "data_jp = pd.read_csv(\"../input_datasets/moviesdata.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "4  https://www.jpbox-office.com/fichfilm.php?id=1...  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "4          Warner Bros.            Harry Potter et la chambre des secrets  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
        "4          Warner Bros.            Harry Potter et la chambre des secrets  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
        "4              1  2002  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1151,7 @@
        "4              1  2002  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1345,7 @@
        "4              1  2002  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1462,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1496,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1612,11 +1612,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_jp.to_pickle(\"datasets/dataset-jp.pkl\")"
+    "data_jp.to_pickle(\"../input_datasets/dataset-jp.pkl\")"
    ]
   },
   {
