modif des items pour correspondre à la bdd

--- a/ml/ql/cleaning_ql.ipynb
+++ b/ml/ql/cleaning_ql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,163 +347,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>acteurs</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>compositeur</th>\n",
-       "      <th>date</th>\n",
-       "      <th>entrees_premiere_semaine</th>\n",
-       "      <th>franchise</th>\n",
-       "      <th>genre</th>\n",
-       "      <th>pays</th>\n",
-       "      <th>producteur</th>\n",
-       "      <th>realisateur</th>\n",
-       "      <th>remake</th>\n",
-       "      <th>studio</th>\n",
-       "      <th>titre</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Daniel Radcliffe, Emma Watson, Gary Oldman, Al...</td>\n",
-       "      <td>130 000 000 $</td>\n",
-       "      <td>John Williams</td>\n",
-       "      <td>02/06/2004</td>\n",
-       "      <td>2 503 699</td>\n",
-       "      <td>Franchise</td>\n",
-       "      <td>Fantasy</td>\n",
-       "      <td>Etats-Unis</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Alfonso Cuaron</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Warner Bros.</td>\n",
-       "      <td>Harry Potter et le prisonnier d'Azkaban</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Robert Pattinson, Daniel Radcliffe, Emma Watso...</td>\n",
-       "      <td>150 000 000 $</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11/07/2007</td>\n",
-       "      <td>2 486 291</td>\n",
-       "      <td>Franchise</td>\n",
-       "      <td>Fantasy</td>\n",
-       "      <td>Etats-Unis</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>David Yates</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Warner Bros.</td>\n",
-       "      <td>Harry Potter et l'Ordre du Phénix</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Dany Boon, François Berléand, Valérie Bonneton...</td>\n",
-       "      <td>27 800 000 €</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>28/02/2018</td>\n",
-       "      <td>2 429 906</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Comédie</td>\n",
-       "      <td>France</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Dany Boon</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Pathé</td>\n",
-       "      <td>La Ch’tite famille</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Johnny Depp, Orlando Bloom, Geoffrey Rush, Kei...</td>\n",
-       "      <td>225 000 000 $</td>\n",
-       "      <td>Hans Zimmer</td>\n",
-       "      <td>02/08/2006</td>\n",
-       "      <td>2 708 112</td>\n",
-       "      <td>Franchise</td>\n",
-       "      <td>Aventure - Action</td>\n",
-       "      <td>Etats-Unis</td>\n",
-       "      <td>Jerry Brukheimer</td>\n",
-       "      <td>Gore Verbinski</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Walt Disney Pictures</td>\n",
-       "      <td>Pirates des Caraïbes, le secret du coffre maudit</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Daniel Radcliffe, Emma Watson, Kenneth Branagh...</td>\n",
-       "      <td>100 000 000 $</td>\n",
-       "      <td>John Williams</td>\n",
-       "      <td>04/12/2002</td>\n",
-       "      <td>2 728 766</td>\n",
-       "      <td>Franchise</td>\n",
-       "      <td>Fantasy</td>\n",
-       "      <td>Etats-Unis</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Chris Columbus</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Warner Bros.</td>\n",
-       "      <td>Harry Potter et la chambre des secrets</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             acteurs         budget  \\\n",
-       "0  Daniel Radcliffe, Emma Watson, Gary Oldman, Al...  130 000 000 $   \n",
-       "1  Robert Pattinson, Daniel Radcliffe, Emma Watso...  150 000 000 $   \n",
-       "2  Dany Boon, François Berléand, Valérie Bonneton...   27 800 000 €   \n",
-       "3  Johnny Depp, Orlando Bloom, Geoffrey Rush, Kei...  225 000 000 $   \n",
-       "4  Daniel Radcliffe, Emma Watson, Kenneth Branagh...  100 000 000 $   \n",
-       "\n",
-       "     compositeur          date entrees_premiere_semaine  franchise  \\\n",
-       "0  John Williams    02/06/2004                2 503 699  Franchise   \n",
-       "1            NaN    11/07/2007                2 486 291  Franchise   \n",
-       "2            NaN    28/02/2018                2 429 906        NaN   \n",
-       "3    Hans Zimmer    02/08/2006                2 708 112  Franchise   \n",
-       "4  John Williams    04/12/2002                2 728 766  Franchise   \n",
-       "\n",
-       "               genre        pays        producteur     realisateur remake  \\\n",
-       "0            Fantasy  Etats-Unis               NaN  Alfonso Cuaron    NaN   \n",
-       "1            Fantasy  Etats-Unis               NaN     David Yates    NaN   \n",
-       "2            Comédie      France               NaN       Dany Boon    NaN   \n",
-       "3  Aventure - Action  Etats-Unis  Jerry Brukheimer  Gore Verbinski    NaN   \n",
-       "4            Fantasy  Etats-Unis               NaN  Chris Columbus    NaN   \n",
-       "\n",
-       "                 studio                                             titre  \n",
-       "0          Warner Bros.           Harry Potter et le prisonnier d'Azkaban  \n",
-       "1          Warner Bros.                 Harry Potter et l'Ordre du Phénix  \n",
-       "2                 Pathé                                La Ch’tite famille  \n",
-       "3  Walt Disney Pictures  Pirates des Caraïbes, le secret du coffre maudit  \n",
-       "4          Warner Bros.            Harry Potter et la chambre des secrets  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de films sans budget : 0\n"
+     ]
     }
    ],
    "source": [
@@ -532,7 +384,10 @@
     "        value = value.strip()\n",
     "        data_jp.at[index, 'titre'] = value\n",
     "\n",
-    "data_jp.head()"
+    "data_jp.head()\n",
+    "nombre_sans_budget = (data_jp['budget'] == 0).sum()\n",
+    "\n",
+    "print(f\"Nombre de films sans budget : {nombre_sans_budget}\")"
    ]
   },
   {
