--- a/ml/ql/predict_ql.ipynb
+++ b/ml/ql/predict_ql.ipynb
@@ -219,7 +219,8 @@
    "metadata": {},
    "source": [
     "### Nous, les Leroy\n",
-    "- Prédiction au 09/04 du nombre d'entrées pour la première semaine : 148272.87354094576\n"
+    "- Prédiction au 09/04 du nombre d'entrées pour la première semaine : 148 272\n",
+    "- premier week-end : 155 439\n"
    ]
   },
   {
@@ -269,12 +270,13 @@
    "metadata": {},
    "source": [
     "### S.O.S. Fantômes : La Menace de glace\n",
-    "- Prédiction au 09/04 du nombre d'entrées pour la première semaine : 589067.274606189\n"
+    "- Prédiction au 09/04 du nombre d'entrées pour la première semaine : 589 067\n",
+    "- premier week-end : 248 128"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
