--- a/ml/ql/predict_ql.ipynb
+++ b/ml/ql/predict_ql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,8 @@
     "result = model.predict(inputs)\n",
     "\n",
     "print(\"Prédiction du nombre d'entrées pour la première semaine :\", result[0])\n",
-    "print(\"Nombre d'entrées réelles :\", \"2 064 740\")"
+    "print(\"Nombre d'entrées réelles :\", \"2 064 740\")\n",
+    "# 1503728.9119381884"
    ]
   },
   {
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +205,8 @@
     "result = model.predict(inputs)\n",
     "\n",
     "print(\"Prédiction du nombre d'entrées pour la première semaine :\", result[0])\n",
-    "print(\"Nombre d'entrées réelles :\", \"1 383 999\")"
+    "print(\"Nombre d'entrées réelles :\", \"1 383 999\")\n",
+    "# 1160805.768966211"
    ]
   },
   {
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +264,8 @@
     "\n",
     "result = model.predict(inputs)\n",
     "\n",
-    "print(\"Prédiction du nombre d'entrées pour la première semaine :\", result[0])"
+    "print(\"Prédiction du nombre d'entrées pour la première semaine :\", result[0])\n",
+    "# 251868.39100035562 "
    ]
   },
   {
@@ -276,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +316,8 @@
     "\n",
     "result = model.predict(inputs)\n",
     "\n",
-    "print(\"Prédiction du nombre d'entrées pour la première semaine :\", result[0])"
+    "print(\"Prédiction du nombre d'entrées pour la première semaine :\", result[0])\n",
+    "# 477714.72832720366"
    ]
   }
  ],
