prediction depuis la db. netoyage du repertoire

--- a/ml/ql/predict_ql.ipynb
+++ b/ml/ql/predict_ql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prédiction du nombre d'entrées pour la première semaine : 583093.2706166679\n",
+      "Prédiction du nombre d'entrées pour la première semaine : 466825.1967925806\n",
       "Nombre d'entrées réelles : 2 126 545\n"
      ]
     },
@@ -112,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prédiction du nombre d'entrées pour la première semaine : 1503728.9119381884\n",
+      "Prédiction du nombre d'entrées pour la première semaine : 1427750.9206143203\n",
       "Nombre d'entrées réelles : 2 064 740\n"
      ]
     },
@@ -166,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prédiction du nombre d'entrées pour la première semaine : 1160805.768966211\n",
+      "Prédiction du nombre d'entrées pour la première semaine : 902414.4228569095\n",
       "Nombre d'entrées réelles : 1 383 999\n"
      ]
     },
@@ -227,21 +227,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prédiction du nombre d'entrées pour la première semaine : 251868.39100035562\n"
+      "Prédiction du nombre d'entrées pour la première semaine : 213423.8768880317\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/cyriljulliard/simplon/Movie_Popularity_Prediction/env/lib/python3.10/site-packages/feature_engine/encoding/base_encoder.py:260: UserWarning: During the encoding, NaN values were introduced in the feature(s) genres, pegi_fr, studio.\n",
+      "/Users/cyriljulliard/simplon/Movie_Popularity_Prediction/env/lib/python3.10/site-packages/feature_engine/encoding/base_encoder.py:260: UserWarning: During the encoding, NaN values were introduced in the feature(s) genres, pegi_fr, pegi_usa, studio.\n",
       "  warnings.warn(\n"
      ]
     }
@@ -279,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prédiction du nombre d'entrées pour la première semaine : 477714.72832720366\n"
+      "Prédiction du nombre d'entrées pour la première semaine : 738919.7249666768\n"
      ]
     },
     {
