--- a/ml/multi_model.ipynb
+++ b/ml/multi_model.ipynb
@@ -1145,17 +1145,17 @@
     "# Vos données X et y\n",
     "X = data.drop(\"entrees_fr\", axis=1)\n",
     "y = data.entrees_fr\n",
-    "# cols_keep = [\"budget\", \"duree\", \"franchise\", \"genres\", \"pegi_fr\", \"pegi_usa\", \"entrees_usa\", \"salles_fr\", \"studio\", \"is_compositeur\", \"annee\", \"origine\"]\n",
-    "cols_keep = [\"duree\", \"genres\", \"salles_fr\", \"studio\", \"annee\", \"origine\"]\n",
+    "cols_keep = [\"budget\", \"duree\", \"franchise\", \"genres\", \"pegi_fr\", \"pegi_usa\", \"entrees_usa\", \"salles_fr\", \"studio\", \"is_compositeur\", \"annee\", \"origine\"]\n",
+    "# cols_keep = [\"duree\", \"genres\", \"salles_fr\", \"studio\", \"annee\", \"origine\"]\n",
     "X = X[cols_keep]\n",
     "\n",
-    "# X[\"franchise\"] = X[\"franchise\"].astype(str)\n",
+    "X[\"franchise\"] = X[\"franchise\"].astype(str)\n",
     "X[\"genres\"] = X[\"genres\"].astype(str)\n",
-    "# X[\"pegi_fr\"] = X[\"pegi_fr\"].astype(str)\n",
+    "X[\"pegi_fr\"] = X[\"pegi_fr\"].astype(str)\n",
     "X[\"origine\"] = X[\"origine\"].astype(str)\n",
     "\n",
-    "# X[\"pegi_usa\"] = X[\"pegi_usa\"].astype(str)\n",
-    "# X[\"is_compositeur\"] = X[\"is_compositeur\"].astype(str)\n",
+    "X[\"pegi_usa\"] = X[\"pegi_usa\"].astype(str)\n",
+    "X[\"is_compositeur\"] = X[\"is_compositeur\"].astype(str)\n",
     "# X[\"annee\"] = X[\"annee\"].astype(str)\n",
     "\n",
     "# Séparation des données en ensembles d'entraînement et de test\n",
